force-app/main/default/objects/ReportRequirement__c/ReportRequirement__c.object-meta.xml
<CustomObject>
    <label>レポート定義</label>
    <nameField>
        <label>レポート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>