force-app/main/default/objects/ReportRequirement__c/fields/chart__c.field-meta.xml
<CustomField>
    <fullName>chart__c</fullName>
    <label>グラフの指定</label>
    <length>150</length>
    <type>Text</type>
</CustomField>