force-app/main/default/objects/ReportRequirement__c/fields/createReportType__c.field-meta.xml
<CustomField>
    <fullName>createReportType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>レポートタイプの作成</label>
    <type>Checkbox</type>
</CustomField>