force-app/main/default/objects/ReportRequirement__c/fields/outline__c.field-meta.xml
<CustomField>
    <fullName>outline__c</fullName>
    <inlineHelpText>No, 区分, 表示項目名, オブジェクト, 備考</inlineHelpText>
    <label>アウトライン</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>