force-app/main/default/objects/ReportRequirement__c/fields/reportID__c.field-meta.xml
<CustomField>
    <fullName>reportID__c</fullName>
    <label>レポートID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>