force-app/main/default/objects/ReportRequirement__c/fields/searchLogic__c.field-meta.xml
<CustomField>
    <fullName>searchLogic__c</fullName>
    <label>検索条件</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>